--- a/spring-boot-dbunit/dubbo-api/pom.xml
+++ b/spring-boot-dbunit/dubbo-api/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>dubbo-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
