--- a/spring-boot-dbunit/dubbo-customer/pom.xml
+++ b/spring-boot-dbunit/dubbo-customer/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.18.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
