--- a/spring-boot-dbunit/pom.xml
+++ b/spring-boot-dbunit/pom.xml
@@ -16,6 +16,7 @@
         <module>dubbo-customer</module>
         <module>dubbo-provider</module>
         <module>dubbo-api</module>
+        <module>unitils-spring-ext</module>
     </modules>
 
 </project>
