--- a/spring-boot-dbunit/dubbo-customer/src/test/resources/unitils.properties
+++ b/spring-boot-dbunit/dubbo-customer/src/test/resources/unitils.properties
@@ -14,7 +14,10 @@
 #dbunit：    整合Dbnuit模块
 #spring：   整合spring模块
 #其它的还有：easymock\mock\inject\io\orm等
-unitils.modules=database,dbunit,spring
+unitils.modules=database,dbunit,springBoot
+unitils.module.springBoot.className=org.unitils.boot.SpringBootModule
+unitils.module.springBoot.runAfter=database
+unitils.module.springBoot.enabled=true
 #自扩展模块
 unitils.module.dbunit.className=org.unitils.dbunit.DbUnitModule
 ############################################################################
@@ -57,8 +60,8 @@ dbMaintainer.script.locations=
 ### Database模块相应配置 ###
 ############################################################################
 # Dbunit中DataSet和ExpectedDataSet的数据准备实现类，（也可以用Excel准备数据，需要替换实现类）
-DbUnitModule.DataSet.factory.default=org.unitils.xls.MultiSchemaXlsDataSetFactory
-DbUnitModule.ExpectedDataSet.factory.default=org.unitils.xls.MultiSchemaXlsDataSetFactory
+DbUnitModule.DataSet.factory.default=org.unitils.boot.xls.MultiSchemaXlsDataSetFactory
+DbUnitModule.ExpectedDataSet.factory.default=org.unitils.boot.xls.MultiSchemaXlsDataSetFactory
 
 org.dbunit.database.IMetadataHandler.implClassName=org.dbunit.ext.mysql.MySqlMetadataHandler
 ## Dbunit中测试数据处理策略
@@ -70,4 +73,4 @@ DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy
 # XSD generator
 dataSetStructureGenerator.xsd.dirName=/tmp/resources/xsd
 
-SpringModule.applicationContextFactory.implClassName=org.unitils.spring.util.SpringBootApplicationContextFactory
+SpringModule.applicationContextFactory.implClassName=org.unitils.boot.util.SpringBootApplicationContextFactory
