--- a/spring-boot-dbunit/dubbo-provider/pom.xml
+++ b/spring-boot-dbunit/dubbo-provider/pom.xml
@@ -18,7 +18,7 @@
             <artifactId>dubbo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>/Users/iwill/.m2/repository/com/iwill/dubbo-api/1.0-SNAPSHOT/dubbo-api-1.0-SNAPSHOT.jar</systemPath>
+            <systemPath>/home/iwill/.m2/repository/com/iwill/dubbo-api/1.0-SNAPSHOT/dubbo-api-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
 
         <dependency>
@@ -54,6 +54,18 @@
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
